test/files/neg/badtok-1.check
badtok-1.scala:2: error: unclosed character literal
'42'
^
badtok-1.scala:2: error: unclosed character literal
'42'
   ^
badtok-1.scala:6: error: empty character literal (use '\'' for single quote)
'''
^
badtok-1.scala:9: error: unclosed character literal (or use " for string literal "abc")
'abc'
    ^
four errors found
